# booster

./: pyproject.toml
.github/workflows/: code-qa.yaml
src/booster/adapters/manager/: base.py  npm.py  utils.py
src/booster/cli/: main.py
templates/frontend/nextjs15-with-supabase/project/: package.json
